--- a/web/package.json
+++ b/web/package.json
@@ -13,7 +13,9 @@
     "browser-sync": "^2.13.0",
     "font-awesome": "^4.6.3",
     "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
     "gulp-clean-css": "^2.0.10",
+    "gulp-copy": "0.0.2",
     "gulp-header": "^1.8.7",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.5.4",
