--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "gulp-clean": "^0.3.2",
     "gulp-clean-css": "^2.0.10",
     "gulp-copy": "0.0.2",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-header": "^1.8.7",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.5.4",
