--- a/web/package.json
+++ b/web/package.json
@@ -20,7 +20,8 @@
     "gulp-header": "^1.8.7",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.5.4",
-    "jquery": "^1.11.3"
+    "jquery": "^1.11.3",
+    "run-sequence": "^1.2.2"
   },
   "repository": {
     "type": "git",
