--- a/web/package.json
+++ b/web/package.json
@@ -18,9 +18,12 @@
     "gulp-copy": "0.0.2",
     "gulp-gh-pages": "^0.5.4",
     "gulp-header": "^1.8.7",
+    "gulp-nunjucks": "^2.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^1.5.4",
     "jquery": "^1.11.3",
+    "marked": "^0.3.6",
+    "nunjucks-markdown": "^2.0.0",
     "run-sequence": "^1.2.2"
   },
   "repository": {
