--- a/web/package.json
+++ b/web/package.json
@@ -18,8 +18,10 @@
     "gulp-copy": "0.0.2",
     "gulp-gh-pages": "^0.5.4",
     "gulp-header": "^1.8.7",
+    "gulp-imagemin": "^3.0.3",
     "gulp-nunjucks-html": "^2.0.0",
     "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.3.2",
     "gulp-uglify": "^1.5.4",
     "jquery": "^1.11.3",
     "marked": "^0.3.6",
@@ -29,8 +31,5 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/BlackrockDigital/startbootstrap-agency.git"
-  },
-  "dependencies": {
-    "gulp-sass": "^2.3.2"
   }
 }
