--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
     "gulp-clean-css": "^2.0.10",
+    "gulp-cli": "^1.2.2",
     "gulp-copy": "0.0.2",
     "gulp-gh-pages": "^0.5.4",
     "gulp-header": "^1.8.7",
